Fix: Remove unsupported MaxPermSize JVM argument for Java 17 compatibility
The -XX:MaxPermSize argument was removed in Java 8 and is not supported in Java 17.
Changed argLine from '-Xmx1024m -XX:MaxPermSize=256m' to '-Xmx1024m' to fix the JVM startup error.