@@ -73,7 +73,7 @@
 					<suiteXmlFiles>
 						<suiteXmlFile>testng.xml</suiteXmlFile>
 					</suiteXmlFiles>
-					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+					<argLine>-Xmx1024m</argLine>
 					<testFailureIgnore>false</testFailureIgnore>
 					<skipTests>false</skipTests>
 				</configuration>
